src/y.output
Useless nonterminals

   complex_statement
   successive_statement


Terminals which are not used

   NULL_STRING
   NEW
   THIS
   AT
   OBJECT_VALUE
   ARRAY_VALUE
   PRINT
   PRINTLN
   SEMICOLON_OPTIONAL
   NEW_ARRAY
   SPACE
   PACKAGE


Useless rules

  177 complex_statement: if_statement

  178 successive_statement: else_statement
  179                     | elif_statement


Rules never reduced

    9 statement: statement INDENT single_statement LF check_indent build_statement_stack


State 23 conflicts: 1 shift/reduce
State 35 conflicts: 15 shift/reduce
State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 39 conflicts: 15 shift/reduce
State 44 conflicts: 2 shift/reduce
State 52 conflicts: 3 shift/reduce
State 89 conflicts: 18 shift/reduce
State 90 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 113 conflicts: 2 shift/reduce
State 117 conflicts: 2 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 2 shift/reduce
State 150 conflicts: 2 shift/reduce
State 175 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 188 conflicts: 18 shift/reduce
State 189 conflicts: 1 shift/reduce
State 190 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 193 conflicts: 1 shift/reduce
State 195 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 197 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 232 conflicts: 35 reduce/reduce
State 243 conflicts: 18 shift/reduce
State 244 conflicts: 18 shift/reduce
State 249 conflicts: 18 shift/reduce


Grammar

    0 $accept: begin_stream $end

    1 begin_stream: import_statement
    2             | statement

    3 import_statement: IMPORT STR_LTR

    4 statement: statement NOINDENT monostatement enclose_statement_stack build_single_statement_stack execute_single_statement LF
    5          | statement NOINDENT foldable_statement build_statement_stack LF
    6          | statement INDENT single_statement LF check_indent build_statement_stack

    7 @1: /* empty */

    8 statement: statement close_execute_last_statement @1 single_statement LF check_indent build_statement_stack execute_single_statement
    9          | statement INDENT single_statement LF check_indent build_statement_stack
   10          | statement LF close_execute_statement
   11          | statement END_FILE close_execute_last_statement
   12          | error
   13          | END_FILE

   14 check_indent: /* empty */

   15 enclose_statement_stack: /* empty */

   16 build_statement_stack: /* empty */

   17 build_single_statement_stack: /* empty */

   18 close_execute_statement: /* empty */

   19 close_execute_last_statement: /* empty */

   20 execute_single_statement: /* empty */

   21 monostatement: expression_statement
   22              | break_statement
   23              | continue_statement
   24              | return_statement
   25              | nop_statement
   26              | var_statement
   27              | global_statement

   28 foldable_statement: function_statement
   29                   | for_statement
   30                   | class_statement
   31                   | while_statement

   32 single_statement: expression_statement
   33                 | if_statement
   34                 | else_statement
   35                 | elif_statement
   36                 | for_statement
   37                 | while_statement
   38                 | break_statement
   39                 | continue_statement
   40                 | return_statement
   41                 | function_statement
   42                 | nop_statement
   43                 | var_statement
   44                 | global_statement
   45                 | class_statement
   46                 | error

   47 single_statement_no_semicolon: expression_statement
   48                              | if_statement
   49                              | for_statement
   50                              | while_statement
   51                              | do_while_statement
   52                              | null_statement

   53 null_statement: /* empty */

   54 nop_statement: NOP

   55 statement_block: LEFT_BRACE block_list RIGHT_BRACE
   56                | LEFT_BRACE RIGHT_BRACE

   57 block_list: single_statement
   58           | block_list single_statement

   59 expression_statement: expression

   60 expression: value_expression
   61           | lvalue_operation_expression
   62           | unary_expression
   63           | binary_expression
   64           | array_expression
   65           | shortcut_expression

   66 lvalue_operation_expression: assign_expression
   67                            | self_operation_expression

   68 assign_expression: lvalue_expression ASSIGN expression
   69                  | lvalue_expression ADD_ASSIGN expression
   70                  | lvalue_expression SUB_ASSIGN expression
   71                  | lvalue_expression MUL_ASSIGN expression
   72                  | lvalue_expression DIV_ASSIGN expression
   73                  | lvalue_expression MOD_ASSIGN expression

   74 self_operation_expression: INCREMENT lvalue_expression
   75                          | DECREMENT lvalue_expression
   76                          | lvalue_expression INCREMENT
   77                          | lvalue_expression DECREMENT

   78 unary_expression: SUB expression
   79                 | ADD expression
   80                 | LEFT_PAREN expression RIGHT_PAREN
   81                 | NOT expression
   82                 | BIT_NOT expression

   83 binary_expression: expression ADD expression
   84                  | expression SUB expression
   85                  | expression MUL expression
   86                  | expression DIV expression
   87                  | expression MOD expression
   88                  | expression AND expression
   89                  | expression OR expression
   90                  | expression XOR expression
   91                  | expression EQ expression
   92                  | expression NE expression
   93                  | expression GT expression
   94                  | expression GE expression
   95                  | expression LT expression
   96                  | expression LE expression
   97                  | expression BIT_AND expression
   98                  | expression BIT_OR expression
   99                  | expression BIT_XOR expression
  100                  | expression QM expression COLON expression

  101 shortcut_expression: SHORTCUT_PRINTLN element_list

  102 value_expression: INT_LTR
  103                 | FLT_LTR
  104                 | BLN_LTR
  105                 | STR_LTR
  106                 | NLL_LTR
  107                 | function_expression
  108                 | lvalue_expression

  109 lvalue_expression: IDENTIFER
  110                  | lvalue_expression DOT IDENTIFER
  111                  | lvalue_expression evaluate_list
  112                  | lvalue_expression DOT function_expression

  113 array_expression: LEFT_QUAD element_list RIGHT_QUAD
  114                 | LEFT_QUAD RIGHT_QUAD

  115 element_list: expression
  116             | element_list COMMA expression

  117 var_statement: VAR assign_list
  118              | SHARED VAR assign_list

  119 global_statement: GLOBAL assign_list

  120 assign_list: IDENTIFER
  121            | IDENTIFER ASSIGN expression
  122            | assign_list COMMA IDENTIFER
  123            | assign_list COMMA IDENTIFER ASSIGN expression

  124 function_expression: IDENTIFER LEFT_PAREN argument_list RIGHT_PAREN
  125                    | IDENTIFER LEFT_PAREN RIGHT_PAREN

  126 argument_list: expression
  127              | IDENTIFER COLON expression
  128              | argument_list COMMA expression
  129              | argument_list COMMA IDENTIFER COLON expression

  130 parameter_list: IDENTIFER
  131               | IDENTIFER ASSIGN expression
  132               | parameter_list COMMA IDENTIFER
  133               | parameter_list COMMA IDENTIFER ASSIGN expression

  134 evaluate_list: LEFT_QUAD expression RIGHT_QUAD
  135              | LEFT_QUAD expression COLON expression RIGHT_QUAD
  136              | LEFT_QUAD expression COLON expression COLON RIGHT_QUAD
  137              | LEFT_QUAD expression COLON expression COLON expression RIGHT_QUAD
  138              | LEFT_QUAD expression COLON RIGHT_QUAD
  139              | LEFT_QUAD expression COLON COLON RIGHT_QUAD
  140              | LEFT_QUAD expression COLON COLON expression RIGHT_QUAD
  141              | LEFT_QUAD COLON expression RIGHT_QUAD
  142              | LEFT_QUAD COLON expression COLON RIGHT_QUAD
  143              | LEFT_QUAD COLON expression COLON expression RIGHT_QUAD
  144              | LEFT_QUAD COLON COLON RIGHT_QUAD
  145              | evaluate_list LEFT_QUAD expression RIGHT_QUAD
  146              | evaluate_list LEFT_QUAD expression COLON expression RIGHT_QUAD
  147              | evaluate_list LEFT_QUAD expression COLON expression COLON RIGHT_QUAD
  148              | evaluate_list LEFT_QUAD expression COLON expression COLON expression RIGHT_QUAD
  149              | evaluate_list LEFT_QUAD expression COLON RIGHT_QUAD
  150              | evaluate_list LEFT_QUAD expression COLON COLON RIGHT_QUAD
  151              | evaluate_list LEFT_QUAD expression COLON COLON expression RIGHT_QUAD
  152              | evaluate_list LEFT_QUAD COLON expression RIGHT_QUAD
  153              | evaluate_list LEFT_QUAD COLON expression COLON RIGHT_QUAD
  154              | evaluate_list LEFT_QUAD COLON expression COLON expression RIGHT_QUAD
  155              | evaluate_list LEFT_QUAD COLON COLON RIGHT_QUAD

  156 if_statement: IF expression

  157 else_statement: ELSE

  158 elif_statement: ELIF expression

  159 for_statement: FOR single_statement_no_semicolon SEMICOLON expression_statement SEMICOLON single_statement_no_semicolon
  160              | FOR single_statement_no_semicolon COLON expression_statement COLON single_statement_no_semicolon

  161 while_statement: WHILE expression
  162                | WHILE

  163 do_while_statement: DO structure_statement WHILE LEFT_PAREN expression_statement RIGHT_PAREN SEMICOLON

  164 break_statement: BREAK
  165                | BREAK LEFT_PAREN expression RIGHT_PAREN

  166 continue_statement: CONTINUE
  167                   | CONTINUE LEFT_PAREN expression RIGHT_PAREN

  168 structure_statement: single_statement
  169                    | statement_block

  170 function_statement: FUNC IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN
  171                   | FUNC IDENTIFER LEFT_PAREN RIGHT_PAREN
  172                   | SHARED FUNC IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN
  173                   | SHARED FUNC IDENTIFER LEFT_PAREN RIGHT_PAREN

  174 class_statement: CLASS IDENTIFER

  175 return_statement: RETURN
  176                 | RETURN expression


Terminals, with rules where they appear

$end (0) 0
error (256) 12 46
NULL_STRING (258)
NOINDENT (259) 4 5
LF (260) 4 5 6 8 9 10
END_FILE (261) 11 13
NEW (262)
IMPORT (263) 3
NOP (264) 54
DOT (265) 110 112
CLASS (266) 174
SHARED (267) 118 172 173
THIS (268)
AT (269)
INDENT (270) 6 9
INT_LTR (271) 102
BLN_LTR (272) 104
FLT_LTR (273) 103
STR_LTR (274) 3 105
OBJECT_VALUE (275)
NLL_LTR (276) 106
ARRAY_VALUE (277)
SHORTCUT_PRINTLN (278) 101
IDENTIFER (279) 109 110 120 121 122 123 124 125 127 129 130 131 132
    133 170 171 172 173 174
ASSIGN (280) 68 121 123 131 133
VAR (281) 117 118
GLOBAL (282) 119
ADD_ASSIGN (283) 69
SUB_ASSIGN (284) 70
MUL_ASSIGN (285) 71
DIV_ASSIGN (286) 72
MOD_ASSIGN (287) 73
PRINT (288)
PRINTLN (289)
LEFT_PAREN (290) 80 124 125 163 165 167 170 171 172 173
RIGHT_PAREN (291) 80 124 125 163 165 167 170 171 172 173
LEFT_QUAD (292) 113 114 134 135 136 137 138 139 140 141 142 143 144
    145 146 147 148 149 150 151 152 153 154 155
RIGHT_QUAD (293) 113 114 134 135 136 137 138 139 140 141 142 143 144
    145 146 147 148 149 150 151 152 153 154 155
LEFT_BRACE (294) 55 56
RIGHT_BRACE (295) 55 56
SEMICOLON_OPTIONAL (296)
SEMICOLON (297) 159 163
COMMA (298) 116 122 123 128 129 132 133
COLON (299) 100 127 129 135 136 137 138 139 140 141 142 143 144 146
    147 148 149 150 151 152 153 154 155 160
ADD (300) 79 83
SUB (301) 78 84
MUL (302) 85
DIV (303) 86
MOD (304) 87
EQ (305) 91
NE (306) 92
GT (307) 93
GE (308) 94
LT (309) 95
LE (310) 96
AND (311) 88
OR (312) 89
NOT (313) 81
XOR (314) 90
BIT_AND (315) 97
BIT_OR (316) 98
BIT_XOR (317) 99
BIT_NOT (318) 82
INCREMENT (319) 74 76
DECREMENT (320) 75 77
IF (321) 156
ELIF (322) 158
ELSE (323) 157
FOR (324) 159 160
WHILE (325) 161 162 163
DO (326) 163
CONTINUE (327) 166 167
BREAK (328) 164 165
FUNC (329) 170 171 172 173
RETURN (330) 175 176
NEW_ARRAY (331)
SPACE (332)
PACKAGE (333)
PLUS_SIGN (334)
MINUS_SIGN (335)
QM (336) 100


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
begin_stream (83)
    on left: 1 2, on right: 0
import_statement (84)
    on left: 3, on right: 1
statement (85)
    on left: 4 5 6 8 9 10 11 12 13, on right: 2 4 5 6 8 9 10 11
@1 (86)
    on left: 7, on right: 8
check_indent (87)
    on left: 14, on right: 6 8 9
enclose_statement_stack (88)
    on left: 15, on right: 4
build_statement_stack (89)
    on left: 16, on right: 5 6 8 9
build_single_statement_stack (90)
    on left: 17, on right: 4
close_execute_statement (91)
    on left: 18, on right: 10
close_execute_last_statement (92)
    on left: 19, on right: 8 11
execute_single_statement (93)
    on left: 20, on right: 4 8
monostatement (94)
    on left: 21 22 23 24 25 26 27, on right: 4
foldable_statement (95)
    on left: 28 29 30 31, on right: 5
single_statement (96)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46,
    on right: 6 8 9 57 58 168
single_statement_no_semicolon (97)
    on left: 47 48 49 50 51 52, on right: 159 160
null_statement (98)
    on left: 53, on right: 52
nop_statement (99)
    on left: 54, on right: 25 42
statement_block (100)
    on left: 55 56, on right: 169
block_list (101)
    on left: 57 58, on right: 55 58
expression_statement (102)
    on left: 59, on right: 21 32 47 159 160 163
expression (103)
    on left: 60 61 62 63 64 65, on right: 59 68 69 70 71 72 73 78 79
    80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    115 116 121 123 126 127 128 129 131 133 134 135 136 137 138 139
    140 141 142 143 145 146 147 148 149 150 151 152 153 154 156 158
    161 165 167 176
lvalue_operation_expression (104)
    on left: 66 67, on right: 61
assign_expression (105)
    on left: 68 69 70 71 72 73, on right: 66
self_operation_expression (106)
    on left: 74 75 76 77, on right: 67
unary_expression (107)
    on left: 78 79 80 81 82, on right: 62
binary_expression (108)
    on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
   , on right: 63
shortcut_expression (109)
    on left: 101, on right: 65
value_expression (110)
    on left: 102 103 104 105 106 107 108, on right: 60
lvalue_expression (111)
    on left: 109 110 111 112, on right: 68 69 70 71 72 73 74 75 76
    77 108 110 111 112
array_expression (112)
    on left: 113 114, on right: 64
element_list (113)
    on left: 115 116, on right: 101 113 116
var_statement (114)
    on left: 117 118, on right: 26 43
global_statement (115)
    on left: 119, on right: 27 44
assign_list (116)
    on left: 120 121 122 123, on right: 117 118 119 122 123
function_expression (117)
    on left: 124 125, on right: 107 112
argument_list (118)
    on left: 126 127 128 129, on right: 124 128 129
parameter_list (119)
    on left: 130 131 132 133, on right: 132 133 170 172
evaluate_list (120)
    on left: 134 135 136 137 138 139 140 141 142 143 144 145 146 147
    148 149 150 151 152 153 154 155, on right: 111 145 146 147 148
    149 150 151 152 153 154 155
if_statement (121)
    on left: 156, on right: 33 48
else_statement (122)
    on left: 157, on right: 34
elif_statement (123)
    on left: 158, on right: 35
for_statement (124)
    on left: 159 160, on right: 29 36 49
while_statement (125)
    on left: 161 162, on right: 31 37 50
do_while_statement (126)
    on left: 163, on right: 51
break_statement (127)
    on left: 164 165, on right: 22 38
continue_statement (128)
    on left: 166 167, on right: 23 39
structure_statement (129)
    on left: 168 169, on right: 163
function_statement (130)
    on left: 170 171 172 173, on right: 28 41
class_statement (131)
    on left: 174, on right: 30 45
return_statement (132)
    on left: 175 176, on right: 24 40


state 0

    0 $accept: . begin_stream $end

    error     shift, and go to state 1
    END_FILE  shift, and go to state 2
    IMPORT    shift, and go to state 3

    begin_stream      go to state 4
    import_statement  go to state 5
    statement         go to state 6


state 1

   12 statement: error .

    $default  reduce using rule 12 (statement)


state 2

   13 statement: END_FILE .

    $default  reduce using rule 13 (statement)


state 3

    3 import_statement: IMPORT . STR_LTR

    STR_LTR  shift, and go to state 7


state 4

    0 $accept: begin_stream . $end

    $end  shift, and go to state 8


state 5

    1 begin_stream: import_statement .

    $default  reduce using rule 1 (begin_stream)


state 6

    2 begin_stream: statement .
    4 statement: statement . NOINDENT monostatement enclose_statement_stack build_single_statement_stack execute_single_statement LF
    5          | statement . NOINDENT foldable_statement build_statement_stack LF
    6          | statement . INDENT single_statement LF check_indent build_statement_stack
    8          | statement . close_execute_last_statement @1 single_statement LF check_indent build_statement_stack execute_single_statement
    9          | statement . INDENT single_statement LF check_indent build_statement_stack
   10          | statement . LF close_execute_statement
   11          | statement . END_FILE close_execute_last_statement

    NOINDENT  shift, and go to state 9
    LF        shift, and go to state 10
    END_FILE  shift, and go to state 11
    INDENT    shift, and go to state 12

    $end      reduce using rule 2 (begin_stream)
    $default  reduce using rule 19 (close_execute_last_statement)

    close_execute_last_statement  go to state 13


state 7

    3 import_statement: IMPORT STR_LTR .

    $default  reduce using rule 3 (import_statement)


state 8

    0 $accept: begin_stream $end .

    $default  accept


state 9

    4 statement: statement NOINDENT . monostatement enclose_statement_stack build_single_statement_stack execute_single_statement LF
    5          | statement NOINDENT . foldable_statement build_statement_stack LF

    NOP               shift, and go to state 14
    CLASS             shift, and go to state 15
    SHARED            shift, and go to state 16
    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    VAR               shift, and go to state 24
    GLOBAL            shift, and go to state 25
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33
    FOR               shift, and go to state 34
    WHILE             shift, and go to state 35
    CONTINUE          shift, and go to state 36
    BREAK             shift, and go to state 37
    FUNC              shift, and go to state 38
    RETURN            shift, and go to state 39

    monostatement                go to state 40
    foldable_statement           go to state 41
    nop_statement                go to state 42
    expression_statement         go to state 43
    expression                   go to state 44
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    var_statement                go to state 54
    global_statement             go to state 55
    function_expression          go to state 56
    for_statement                go to state 57
    while_statement              go to state 58
    break_statement              go to state 59
    continue_statement           go to state 60
    function_statement           go to state 61
    class_statement              go to state 62
    return_statement             go to state 63


state 10

   10 statement: statement LF . close_execute_statement

    $default  reduce using rule 18 (close_execute_statement)

    close_execute_statement  go to state 64


state 11

   11 statement: statement END_FILE . close_execute_last_statement

    $default  reduce using rule 19 (close_execute_last_statement)

    close_execute_last_statement  go to state 65


state 12

    6 statement: statement INDENT . single_statement LF check_indent build_statement_stack
    9          | statement INDENT . single_statement LF check_indent build_statement_stack

    error             shift, and go to state 66
    NOP               shift, and go to state 14
    CLASS             shift, and go to state 15
    SHARED            shift, and go to state 16
    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    VAR               shift, and go to state 24
    GLOBAL            shift, and go to state 25
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33
    IF                shift, and go to state 67
    ELIF              shift, and go to state 68
    ELSE              shift, and go to state 69
    FOR               shift, and go to state 34
    WHILE             shift, and go to state 35
    CONTINUE          shift, and go to state 36
    BREAK             shift, and go to state 37
    FUNC              shift, and go to state 38
    RETURN            shift, and go to state 39

    single_statement             go to state 70
    nop_statement                go to state 71
    expression_statement         go to state 72
    expression                   go to state 44
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    var_statement                go to state 73
    global_statement             go to state 74
    function_expression          go to state 56
    if_statement                 go to state 75
    else_statement               go to state 76
    elif_statement               go to state 77
    for_statement                go to state 78
    while_statement              go to state 79
    break_statement              go to state 80
    continue_statement           go to state 81
    function_statement           go to state 82
    class_statement              go to state 83
    return_statement             go to state 84


state 13

    8 statement: statement close_execute_last_statement . @1 single_statement LF check_indent build_statement_stack execute_single_statement

    $default  reduce using rule 7 (@1)

    @1  go to state 85


state 14

   54 nop_statement: NOP .

    $default  reduce using rule 54 (nop_statement)


state 15

  174 class_statement: CLASS . IDENTIFER

    IDENTIFER  shift, and go to state 86


state 16

  118 var_statement: SHARED . VAR assign_list
  172 function_statement: SHARED . FUNC IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN
  173                   | SHARED . FUNC IDENTIFER LEFT_PAREN RIGHT_PAREN

    VAR   shift, and go to state 87
    FUNC  shift, and go to state 88


state 17

  102 value_expression: INT_LTR .

    $default  reduce using rule 102 (value_expression)


state 18

  104 value_expression: BLN_LTR .

    $default  reduce using rule 104 (value_expression)


state 19

  103 value_expression: FLT_LTR .

    $default  reduce using rule 103 (value_expression)


state 20

  105 value_expression: STR_LTR .

    $default  reduce using rule 105 (value_expression)


state 21

  106 value_expression: NLL_LTR .

    $default  reduce using rule 106 (value_expression)


state 22

  101 shortcut_expression: SHORTCUT_PRINTLN . element_list

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 89
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    element_list                 go to state 90
    function_expression          go to state 56


state 23

  109 lvalue_expression: IDENTIFER .
  124 function_expression: IDENTIFER . LEFT_PAREN argument_list RIGHT_PAREN
  125                    | IDENTIFER . LEFT_PAREN RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 91

    LEFT_PAREN  [reduce using rule 109 (lvalue_expression)]
    $default    reduce using rule 109 (lvalue_expression)


state 24

  117 var_statement: VAR . assign_list

    IDENTIFER  shift, and go to state 92

    assign_list  go to state 93


state 25

  119 global_statement: GLOBAL . assign_list

    IDENTIFER  shift, and go to state 92

    assign_list  go to state 94


state 26

   80 unary_expression: LEFT_PAREN . expression RIGHT_PAREN

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 95
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    function_expression          go to state 56


state 27

  113 array_expression: LEFT_QUAD . element_list RIGHT_QUAD
  114                 | LEFT_QUAD . RIGHT_QUAD

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    RIGHT_QUAD        shift, and go to state 96
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 89
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    element_list                 go to state 97
    function_expression          go to state 56


state 28

   79 unary_expression: ADD . expression

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 98
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    function_expression          go to state 56


state 29

   78 unary_expression: SUB . expression

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 99
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    function_expression          go to state 56


state 30

   81 unary_expression: NOT . expression

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 100
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    function_expression          go to state 56


state 31

   82 unary_expression: BIT_NOT . expression

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33

    expression                   go to state 101
    lvalue_operation_expression  go to state 45
    assign_expression            go to state 46
    self_operation_expression    go to state 47
    unary_expression             go to state 48
    binary_expression            go to state 49
    shortcut_expression          go to state 50
    value_expression             go to state 51
    lvalue_expression            go to state 52
    array_expression             go to state 53
    function_expression          go to state 56


state 32

   74 self_operation_expression: INCREMENT . lvalue_expression

    IDENTIFER  shift, and go to state 102

    lvalue_expression  go to state 103


state 33

   75 self_operation_expression: DECREMENT . lvalue_expression

    IDENTIFER  shift, and go to state 102

    lvalue_expression  go to state 104


state 34

  159 for_statement: FOR . single_statement_no_semicolon SEMICOLON expression_statement SEMICOLON single_statement_no_semicolon
  160              | FOR . single_statement_no_semicolon COLON expression_statement COLON single_statement_no_semicolon

    INT_LTR           shift, and go to state 17
    BLN_LTR           shift, and go to state 18
    FLT_LTR           shift, and go to state 19
    STR_LTR           shift, and go to state 20
    NLL_LTR           shift, and go to state 21
    SHORTCUT_PRINTLN  shift, and go to state 22
    IDENTIFER         shift, and go to state 23
    LEFT_PAREN        shift, and go to state 26
    LEFT_QUAD         shift, and go to state 27
    ADD               shift, and go to state 28
    SUB               shift, and go to state 29
    NOT               shift, and go to state 30
    BIT_NOT           shift, and go to state 31
    INCREMENT         shift, and go to state 32
    DECREMENT         shift, and go to state 33
    IF                shift, and go to state 67
    FOR               shift, and go to state 34
    WHILE             shift, and go to state 35
    DO                shift, and go to state 105

    $default  reduce using rule 53 (null_statement)
